FrostWire 2.1.9 build 634 - FEB/29/2020
 - Album art display bug fixed
 - No more annoying 300x250 ad over album art on Music Player
 - Issues with search results not being displayed fixed
 - MusicPlaybackService rewritten
 - Continuous playback issues fixed
 - Repeat mode and shuffle mode issues fixed
 - Save to Playlist issue fixed
 - New Global Sequential Downloads Torrent Setting. Disabled by default
 - Transfer details file list and peer list no longer flicker when updated
 - New jlibtorrent 1.2.3
 - libtorrent 1.2.3.0 update
 - com.google.android.material:material:1.2.0-alpha04->1.2.0-alpha05 update
 - com.google.code.gson:gson:2.8.5 -> 2.8.6 update
 - boost 1.72.0 build
 - openssl 1.1.1d
 - Android NDK 21
 - R8 code minification enabled to build .apk
 - UX: New 'Retry Download' action for failed magnet downloads
 - UX: No more annoying ever-present Android notification, only during active transfers or music playback
 - UX: Torrent search results now show how old they are
 - EngineService and MusicPlaybackService are no longer ran as foreground services following newer android guidelines
 - Considerable CPU usage reduction through thread invocation throttling frees resources for better search and download experience
 - Removed experimental haptic feedback feature
 - Multiple crashes fixed
 - Music player and notifications framework update
 - MusicPlaybackService lifecycle rewrite
 - SoundCloud search/downloads fixed
 - LimeTorrents search/downloads fixed
 - Fixes crash searching for music in My Music screens
 - Fixes issue media scanning finished download files
 - androidx browser 1.3.0-alpha01
 - applovin and mopub mediation 9.11.4
 - mopub 5.11.0 update
 - com.unity3d.ads:unity-ads:3.4.2 update
 - lt:fix erroneous event=completed tracker announce when checking files
 - lt:promote errors in parsing listen_interfaces to post listen_failed_alert
 - lt:fix bug in protocol encryption/obfuscation
 - lt:fix buffer overflow in SOCKS5 UDP logic