@@ -160,6 +160,7 @@
     <string name="use_torrentdownloads">Usar TorrentDownloads</string>
     <string name="use_torrentz2">Usar Torrentz2</string>
     <string name="use_limetorrents">Usar Limetorrents</string>
+    <string name="use_magnetdl">Usar MagnetDL</string>
     <string name="use_nyaa">Usar Nyaa</string>
     <string name="use_eztv">Usar Eztv</string>
     <string name="transfer_status_demuxing">Demuxing</string>
