@@ -267,6 +267,7 @@
     <string name="http_download_status_save_dir_error">Sauv.répertoire n\'existe pas ou ne peut pas être créé.</string>
     <string name="select_option_below">Sélectionnez l\'option ci-dessous:</string>
     <string name="use_limetorrents">Utilisez Limetorrents</string>
+    <string name="use_magnetdl">Utilisez MagnetDL</string>
     <string name="error_no_internet_connection">Erreur: Vérifiez la connexion Internet</string>
     <string name="why_we_need_storage_permissions">Pourquoi nous avons besoin des autorisations de stockage.</string>
     <string name="invalid_filename">Nom de fichier non valide</string>
